--- a/css/footer.css
+++ b/css/footer.css
@@ -5,7 +5,7 @@
 
 .footer-container {
     display: flex;
-    align-items: baseline;
+    align-items: flex-start;
 }
 
 .footer-info {
