--- a/css/header.css
+++ b/css/header.css
@@ -56,10 +56,10 @@
 }
 
 .nav-link.current::after {
-    content: '';
+    content: "";
     position: absolute;
     left: 0;
-    bottom: -1px;
+    bottom: 0;
     width: 100%;
     height: 4px;
     border-radius: 2px;
